# screenpipe

./: .gitignore  CLAUDE.md  Cargo.toml  ENHANCEMENTS_SUMMARY.md  M1_BUILD_GUIDE.md  PR_SUMMARY.md  README.md  TESTING.md  VISION.md  find: ‘screenpipe-app-nextjs’: No such file or directory  task_info.txt
.cargo/: config.toml
.claude/agents/: screenpipe-query.md
.github/workflows/: build-enterprise-windows.yml  e2e-test.yml  m1-compatibility-check.yml  release-app.yml
apps/screenpipe-app-tauri/: package.json
apps/screenpipe-app-tauri/app/: globals.css  layout.tsx  page.tsx
apps/screenpipe-app-tauri/components/: cli-command-dialog.tsx  cloud-bootstrap-handler.tsx  deeplink-handler.tsx  dictation-floating-window.tsx  dictation-indicator.tsx  log-file-button.tsx  screenpipe-status.tsx  standalone-chat.tsx  update-banner.tsx  upgrade-dialog.tsx
apps/screenpipe-app-tauri/e2e/: README.md
apps/screenpipe-app-tauri/lib/: chat-utils.ts  summary-templates.ts  utils.ts
content/changelogs/: v2.0.484.md  v2.0.485.md  v2.0.486.md  v2.0.487.md
crates/screenpipe-audio/: Cargo.toml  build.rs
crates/screenpipe-db/: Cargo.toml
crates/screenpipe-engine/: build.rs
crates/screenpipe-integrations/: Cargo.toml
crates/screenpipe-server/: Cargo.toml
crates/screenpipe-vault/: Cargo.toml
crates/screenpipe-vault/src/: crypto.rs  manager.rs  migration.rs
crates/screenpipe-vision/: build.rs
docs/: ENTERPRISE-WINDOWS.md  TAURI-SIGNING-KEYS.md
plans/: fix-timeline-audio-flagging.md  openai-compatible-transcription.md  voice-dictation-plan.md
(+211 files in other folders)
